# stalk

./: .gitignore  CHANGELOG.md  README.md  Straw.hs  cabal.project  dev-profile-1-link  flake.nix  hie.yaml  nixpkgs.nix  result  stalk.cabal  straw.cabal
.github/workflows/: ci-m1.yml  ci.yml  lint.yml
examples/: Examples.hs
examples/Examples/: Arithmetic.hs  Lens.hs  Snarkl.hs  SnarklUnitTests.hs  Stalk.hs  Straw.hs  Sudoku.hs
src/: Stalk.hs  Straw.hs
