cabal-version:      2.4
name:               straw
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Greg Pfeil
maintainer:         greg@technomadic.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules: Straw

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , categorifier-category
                    , categorifier-vec-integration
                    , concat-classes
                    , constraints
                    , fin
                    , snarkl
                    , vec
    default-language: Haskell2010

test-suite examples
    type: exitcode-stdio-1.0
    hs-source-dirs: examples
    main-is: Examples.hs
    other-modules: Examples.Snarkl
                 , Examples.Straw
    build-depends:    base
                    , categorifier-category
                    , categorifier-client
                    , categorifier-concat-integration
                    , categorifier-plugin
                    , categorifier-vec-integration
                    , concat-classes
                    , ghc-prim
                    , hedgehog
                    , snarkl
                    , straw
                    , vec
    default-language: Haskell2010
    ghc-options: -fplugin Categorifier
                 -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.ConCat.classHierarchy
                 -fplugin-opt Categorifier:lookup:Categorifier.Core.MakerMap.baseSymbolLookup
                 -fplugin-opt Categorifier:lookup:Categorifier.Vec.Integration.symbolLookup
                 -fplugin-opt Categorifier:maker-map:Categorifier.Core.MakerMap.baseMakerMapFun
                 -fplugin-opt Categorifier:maker-map:Categorifier.Vec.Integration.makerMapFun
                 -- need -fno-enable-rewrite-rules to avoid `(# ... #)`
                 -fno-enable-rewrite-rules
                 -fno-ignore-interface-pragmas
